--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,7 @@ button
 @media (max-width: 412px) {
   .cCards
   {
+    margin-top: 5%;
     margin-bottom: 0%;
   }
 }
@@ -286,6 +287,7 @@ button
 @media (max-width: 393px) {
   .cCards
   {
+    margin-top: 5%;
     margin-bottom: 0%;
   }
 }
@@ -293,12 +295,14 @@ button
 @media (max-width: 375px) {
   .cCards
   {
+    margin-top: 5%;
     margin-bottom: 0%;
   }
 }
 @media (max-width: 360px) {
   .cCards
   {
+    margin-top: 5%;
     margin-bottom: 0%;
   }
 }
