--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ button
     width: 90%;
     margin: 0% 5%;
     margin-top: 33%;
-    margin-bottom: 0;
+    margin-bottom: -10%;
   }
   h1
   {
